# rust_embedded_starter

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
docs/: Boilerplate Installation.md  Rust Einstieg.md  debug_overview.md
examples/: lights_reg.rs  mct_1_lauflicht.rs  mct_2_uart.rs  mct_3_stepper.rs  stepper.rs  tim3_pwm.rs  uart_lib.rs  usart2.rs
src/: libtest.rs  main.rs
