[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

[dependencies]
rustuino = "0.1.0"
cortex-m-rt = "0.7.1"

[profile.release]
codegen-units = 1 # longer build times but better optimizations
debug = true      # enable debug symbols in release as they don't increase the size on flash
lto = true        # enable link time optimizations for better performance

[[bin]]
name = "{{crate_name}}"
test = false
bench = false

[[example]]
name = "lights_reg"
crate-type = ["bin"]
test = false
bench = false

[[example]]
name = "uart_lib"
crate-type = ["bin"]
test = false
bench = false
